--- a/spec/system/renderState/addDialogue.spec.yaml
+++ b/spec/system/renderState/addDialogue.spec.yaml
@@ -61,3 +61,109 @@ out:
       y: 0
       children: []
   animations: []
+---
+case: nvl-template-receives-lines
+in:
+  - elements:
+      - id: "story"
+        type: "container"
+        x: 0
+        y: 0
+        children: []
+    animations: []
+  - presentationState:
+      dialogue:
+        mode: "nvl"
+        gui:
+          resourceId: "nvl-layout"
+        characterId: "bob"
+        content:
+          - text: "Third line"
+        lines:
+          - content:
+              - text: "First line"
+            characterId: "narrator"
+          - content:
+              - text: "Second line"
+            characterId: "alice"
+          - content:
+              - text: "Third line"
+            characterId: "bob"
+    resources:
+      layouts:
+        nvl-layout:
+          elements:
+            - id: "nvl-container"
+              type: "container"
+              children: []
+      characters:
+        narrator:
+          name: "Narrator"
+        alice:
+          name: "Alice"
+        bob:
+          name: "Bob"
+    dialogueUIHidden: false
+    autoMode: false
+    skipMode: false
+    currentLocalizationPackageId: null
+out:
+  elements:
+    - id: "story"
+      type: "container"
+      x: 0
+      y: 0
+      children:
+        - id: "nvl-container"
+          type: "container"
+          children: []
+  animations: []
+---
+case: nvl-multi-line-display
+in:
+  - elements:
+      - id: "story"
+        type: "container"
+        x: 0
+        y: 0
+        children: []
+    animations: []
+  - presentationState:
+      dialogue:
+        mode: "nvl"
+        gui:
+          resourceId: "nvl-layout"
+        content:
+          - text: "Narration without character"
+        lines:
+          - content:
+              - text: "Line with character"
+            characterId: "alice"
+          - content:
+              - text: "Narration without character"
+            characterId: null
+    resources:
+      layouts:
+        nvl-layout:
+          elements:
+            - id: "nvl-container"
+              type: "container"
+              children: []
+      characters:
+        alice:
+          name: "Alice"
+    dialogueUIHidden: false
+    autoMode: false
+    skipMode: false
+    currentLocalizationPackageId: null
+out:
+  elements:
+    - id: "story"
+      type: "container"
+      x: 0
+      y: 0
+      children:
+        - id: "nvl-container"
+          type: "container"
+          children: []
+  animations: []
