--- a/src/schemas/presentationActions.yaml
+++ b/src/schemas/presentationActions.yaml
@@ -243,7 +243,7 @@ properties:
     type: object
     description: Layout configuration for UI layouts
     properties:
-      resourceIdId:
+      resourceId:
         type: string
         description: ID of the layout to display
     additionalProperties: false
