--- a/rettangoli.config.yaml
+++ b/rettangoli.config.yaml
@@ -42,3 +42,5 @@ vt:
           files: "keyboard"
         - title: "Variables"
           files: "variables"
+        - title: "initialization"
+          files: "initialization"
