--- a/spec/system/createInitialState.spec.yaml
+++ b/spec/system/createInitialState.spec.yaml
@@ -374,3 +374,79 @@ out:
       bgm:
         resourceId: __undefined__
       variables: {}
+---
+case: initialize with specific initialLineId
+in:
+  - global:
+      currentLocalizationPackageId: "en"
+    projectData:
+      story:
+        initialSceneId: "scene1"
+        scenes:
+          scene1:
+            initialSectionId: "section1"
+            sections:
+              section1:
+                initialLineId: "line2"
+                lines:
+                  - id: "line1"
+                    actions: {}
+                  - id: "line2"
+                    actions: {}
+out:
+  global:
+    autoplayDelay: 1000
+    isLineCompleted: false
+    pendingEffects: []
+    autoMode: false
+    skipMode: false
+    dialogueUIHidden: false
+    isDialogueHistoryShowing: false
+    currentLocalizationPackageId: "en"
+    viewedRegistry:
+      sections: []
+      resources: []
+    nextLineConfig:
+      manual:
+        enabled: true
+        requireLineCompleted: false
+      auto:
+        enabled: false
+    saveSlots: {}
+    layeredViews: []
+    variables: {}
+  projectData:
+    story:
+      initialSceneId: "scene1"
+      scenes:
+        scene1:
+          initialSectionId: "section1"
+          sections:
+            section1:
+              initialLineId: "line2"
+              lines:
+                - id: "line1"
+                  actions: {}
+                - id: "line2"
+                  actions: {}
+  contexts:
+    - currentPointerMode: "read"
+      pointers:
+        read:
+          sceneId: "scene1"
+          sectionId: "section1"
+          lineId: "line2"
+        history:
+          sectionId: __undefined__
+          lineId: __undefined__
+          historySequenceIndex: __undefined__
+      historySequence:
+        - sectionId: "section1"
+          initialState: {}
+          lines:
+            - id: "line2"
+      configuration: {}
+      views: []
+      bgm:
+        resourceId: __undefined__
+      variables: {}
