Auto mode continues after skip ends; fixed tests

--- a/spec/system/actions/nextLine.spec.yaml
+++ b/spec/system/actions/nextLine.spec.yaml
@@ -38,6 +38,7 @@ out:
       manual:
         enabled: true
     pendingEffects:
+      - name: "clearNextLineConfigTimer"
       - name: "render"
   projectData:
     story:
