--- a/spec/system/actions/toggleAutoMode.spec.yaml
+++ b/spec/system/actions/toggleAutoMode.spec.yaml
@@ -10,11 +10,30 @@ in:
   - state:
       global:
         autoMode: false
+        isLineCompleted: false
         pendingEffects: []
         autoplayDelay: 1000
 out:
   global:
     autoMode: true
+    isLineCompleted: false
+    autoplayDelay: 1000
+    pendingEffects:
+      - name: clearAutoNextTimer
+      - name: render
+---
+case: toggle auto mode from false to true when line completed
+in:
+  - state:
+      global:
+        autoMode: false
+        isLineCompleted: true
+        pendingEffects: []
+        autoplayDelay: 1000
+out:
+  global:
+    autoMode: true
+    isLineCompleted: true
     autoplayDelay: 1000
     pendingEffects:
       - name: clearAutoNextTimer
@@ -28,11 +47,13 @@ in:
   - state:
       global:
         autoMode: true
+        isLineCompleted: false
         pendingEffects: []
         autoplayDelay: 1000
 out:
   global:
     autoMode: false
+    isLineCompleted: false
     autoplayDelay: 1000
     pendingEffects:
       - name: clearAutoNextTimer
@@ -44,6 +65,7 @@ in:
       global:
         autoMode: false
         skipMode: true
+        isLineCompleted: false
         pendingEffects: []
         autoplayDelay: 1000
 out:
@@ -51,12 +73,10 @@ out:
     autoMode: true
     autoplayDelay: 1000
     skipMode: false
+    isLineCompleted: false
     pendingEffects:
       - name: clearSkipNextTimer
       - name: clearAutoNextTimer
-      - name: startAutoNextTimer
-        payload:
-          delay: 1000
       - name: render
 ---
 case: toggle auto mode from true to false with skip mode enabled
@@ -65,6 +85,7 @@ in:
       global:
         autoMode: true
         skipMode: true
+        isLineCompleted: false
         pendingEffects: []
         autoplayDelay: 1000
 out:
@@ -72,6 +93,7 @@ out:
     autoMode: false
     autoplayDelay: 1000
     skipMode: true
+    isLineCompleted: false
     pendingEffects:
       - name: clearAutoNextTimer
       - name: render
@@ -81,6 +103,7 @@ in:
   - state:
       global:
         autoMode: false
+        isLineCompleted: false
         pendingEffects:
           - name: existingEffect
             data: test
@@ -88,14 +111,12 @@ in:
 out:
   global:
     autoMode: true
+    isLineCompleted: false
     autoplayDelay: 1000
     pendingEffects:
       - name: existingEffect
         data: test
       - name: clearAutoNextTimer
-      - name: startAutoNextTimer
-        payload:
-          delay: 1000
       - name: render
 ---
 case: toggle auto mode with existing pending effects (enabled to disabled)
@@ -103,6 +124,7 @@ in:
   - state:
       global:
         autoMode: true
+        isLineCompleted: false
         pendingEffects:
           - name: existingEffect
             data: test
@@ -110,6 +132,7 @@ in:
 out:
   global:
     autoMode: false
+    isLineCompleted: false
     autoplayDelay: 1000
     pendingEffects:
       - name: existingEffect
