--- a/spec/system/renderState/addBgm.spec.yaml
+++ b/spec/system/renderState/addBgm.spec.yaml
@@ -19,12 +19,13 @@ in:
       bgm:
         resourceId: "backgroundMusic"
         loop: true
-        volume: 700
         delay: 0
     resources:
       sounds:
         backgroundMusic:
           fileId: "bgm.mp3"
+    variables:
+      _musicVolume: 700
 out:
   elements:
     - id: "story"
@@ -88,12 +89,13 @@ in:
       bgm:
         resourceId: "customMusic"
         loop: false
-        volume: 300
         delay: 1000
     resources:
       sounds:
         customMusic:
           fileId: "custom.mp3"
+    variables:
+      _musicVolume: 300
 out:
   elements:
     - id: "story"
